# learn-zkp

./: Cargo.toml
.github/workflows/: ci.yaml
p3/: Cargo.toml
p3/benches/: multilinear.rs
p3/src/: challenger.rs  field.rs  lib.rs  merkle_tree.rs  polyval.rs  symmetric.rs  util.rs
p3/src/field/: array.rs  binary.rs  ext_packing.rs  from_uniform_bytes.rs  slice.rs
p3/src/poly/: multilinear.rs  univariate.rs
p3/src/polyval/: aarch64_neon.rs  ntt.rs  portable.rs  x86_64_avx2.rs
poly-commit/: Cargo.toml
poly-commit/benches/: bench.rs
poly-commit/src/: basefold.rs  lib.rs
poly-commit/src/basefold/: code.rs
poly-commit/src/basefold/code/: binary_reed_solomon.rs  generic.rs  reed_solomon.rs
sumcheck/: Cargo.toml
sumcheck/src/: function.rs  lib.rs  poly.rs
sumcheck/src/function/: batch.rs  eval.rs  eval_imp.rs  eval_impr.rs  quadratic.rs
util/: Cargo.toml
util/src/: challenger.rs  collection.rs  field.rs  lib.rs
util/src/poly/: multilinear.rs  univariate.rs
