[workspace]
members = ["p3", "poly-commit", "sumcheck", "util"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
auto_impl = "1.2.0"
bincode = "1.3.3"
criterion = "0.5.1"
derive_more = "1.0.0"
itertools = "0.13.0"
num-bigint = { version = "0.4.3", default-features = false }
p3-baby-bear = { git = "https://github.com/plonky3/plonky3" }
p3-challenger = { git = "https://github.com/plonky3/plonky3" }
p3-commit = { git = "https://github.com/plonky3/plonky3" }
p3-dft = { git = "https://github.com/plonky3/plonky3" }
p3-field = { git = "https://github.com/plonky3/plonky3" }
p3-field-testing = { git = "https://github.com/plonky3/plonky3" }
p3-goldilocks = { git = "https://github.com/plonky3/plonky3" }
p3-keccak = { git = "https://github.com/plonky3/plonky3" }
p3-matrix = { git = "https://github.com/plonky3/plonky3" }
p3-maybe-rayon = { git = "https://github.com/plonky3/plonky3" }
p3-merkle-tree = { git = "https://github.com/plonky3/plonky3" }
p3-mersenne-31 = { git = "https://github.com/plonky3/plonky3" }
p3-symmetric = { git = "https://github.com/plonky3/plonky3" }
p3-util = { git = "https://github.com/plonky3/plonky3" }
rand = "0.8.5"
rayon = "1"
serde = "1"
