[package]
name = "poly-commit"
edition.workspace = true
version.workspace = true

[dependencies]
derive_more = { workspace = true, features = ["as_ref"] }
p3-challenger = { workspace = true }
p3-commit = { workspace = true }
p3-field = { workspace = true }
p3-matrix = { workspace = true }
rand = { workspace = true }
util = { path = "../util" }

[dev-dependencies]
p3-baby-bear = { workspace = true }

[features]
default = []

[lints.rust]
missing_debug_implementations = "forbid"

[lints.rustdoc]
broken_intra_doc_links = "forbid"
