[package]
name = "poly-commit"
edition.workspace = true
version.workspace = true

[dependencies]
derive_more = { workspace = true, features = ["as_ref"] }
rand = { workspace = true }
p3 = { path = "../p3" }
sumcheck = { path = "../sumcheck" }
util = { path = "../util" }

[dev-dependencies]
criterion = { workspace = true }

[features]
default = []

[lints.rust]
missing_debug_implementations = "forbid"

[lints.rustdoc]
broken_intra_doc_links = "forbid"

[[bench]]
name = "poly-commit"
harness = false
