[package]
name = "sumcheck"
edition.workspace = true
version.workspace = true

[dependencies]
auto_impl = { workspace = true }
p3-challenger = { workspace = true }
p3-field = { workspace = true }
rand = { workspace = true }
util = { path = "../util" }

[dev-dependencies]
p3-baby-bear = { workspace = true }

[features]
default = []

[lints.rust]
missing_debug_implementations = "forbid"

[lints.rustdoc]
broken_intra_doc_links = "forbid"
