[package]
name = "sumcheck"
edition.workspace = true
version.workspace = true

[dependencies]
auto_impl = { workspace = true }
derive_more = { workspace = true, features = ["deref", "deref_mut"] }
p3 = { path = "../p3" }
rand = { workspace = true }
util = { path = "../util" }

[dev-dependencies]

[features]
default = []

[lints.rust]
missing_debug_implementations = "forbid"

[lints.rustdoc]
broken_intra_doc_links = "forbid"
