[package]
name = "util"
edition.workspace = true
version.workspace = true

[dependencies]
itertools = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]

[features]
default = []

[lints.rust]
missing_debug_implementations = "forbid"

[lints.rustdoc]
broken_intra_doc_links = "forbid"
